--- a/wine_quality_prediction.ipynb
+++ b/wine_quality_prediction.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPNrXrmCLUFPkafR4XiqVwo",
+      "authorship_tag": "ABX9TyNxwnvYUPWKk32WOrMrdFqz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,29 +28,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "nYoxEucZcpNz",
-        "outputId": "54d9d313-fdfa-43c7-8a9a-69cd05233d1d"
+        "outputId": "53f0ba1f-5c18-44c7-f476-7113351abf64"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Cloning into 'wine_quality_prediction'...\n",
-            "remote: Enumerating objects: 3, done.\u001b[K\n",
-            "remote: Counting objects: 100% (3/3), done.\u001b[K\n",
-            "remote: Total 3 (delta 0), reused 0 (delta 0), pack-reused 0\u001b[K\n",
-            "Receiving objects: 100% (3/3), done.\n"
+            "Cloning into 'wine_quality_orediction'...\n",
+            "warning: You appear to have cloned an empty repository.\n"
           ]
         }
       ],
       "source": [
-        "!git clone https://github.com/frazakram/wine_quality_prediction.git"
+        "!git clone https://github.com/frazakram/wine_quality_orediction.git"
       ]
     },
     {
@@ -76,7 +73,7 @@
       "metadata": {
         "id": "EOVDivtqfJq2"
       },
-      "execution_count": 16,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -85,7 +82,7 @@
       "metadata": {
         "id": "LuCxYtKSf00s"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -100,12 +97,12 @@
     {
       "cell_type": "code",
       "source": [
-        "tf=pd.read_csv(\"/content/winequality-red[1].csv\")"
+        "tf=pd.read_csv(\"/content/winequality-red.csv\")"
       ],
       "metadata": {
         "id": "3ulCoohNgiGQ"
       },
-      "execution_count": 17,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -118,9 +115,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0cR-XXHCh1aS",
-        "outputId": "3c2006d3-4408-46e5-d8ec-00932c9fc9a7"
+        "outputId": "4ad0888f-49c2-43a4-cc95-8041e10f8355"
       },
-      "execution_count": 18,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -130,7 +127,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 18
+          "execution_count": 4
         }
       ]
     },
@@ -145,9 +142,9 @@
           "height": 261
         },
         "id": "KhHkWimjiBsX",
-        "outputId": "3f5adc0e-3407-454f-a96f-64d0fe128c53"
+        "outputId": "c0041e74-ea78-4acf-f248-3f8312b32276"
       },
-      "execution_count": 19,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -176,7 +173,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-df444b15-974c-492f-af4e-7bf4a628a4e1\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-dd52ce9c-78f1-4d33-b9f6-7e25e8316540\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -291,7 +288,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-df444b15-974c-492f-af4e-7bf4a628a4e1')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-dd52ce9c-78f1-4d33-b9f6-7e25e8316540')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -343,12 +340,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-df444b15-974c-492f-af4e-7bf4a628a4e1 button.colab-df-convert');\n",
+              "        document.querySelector('#df-dd52ce9c-78f1-4d33-b9f6-7e25e8316540 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-df444b15-974c-492f-af4e-7bf4a628a4e1');\n",
+              "        const element = document.querySelector('#df-dd52ce9c-78f1-4d33-b9f6-7e25e8316540');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -368,8 +365,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-f61547cb-b338-4e21-af90-5b5eb23405ef\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-f61547cb-b338-4e21-af90-5b5eb23405ef')\"\n",
+              "<div id=\"df-5195a0be-ddb3-4d0f-983e-523d4bba3f87\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-5195a0be-ddb3-4d0f-983e-523d4bba3f87')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -488,7 +485,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-f61547cb-b338-4e21-af90-5b5eb23405ef button');\n",
+              "        document.querySelector('#df-5195a0be-ddb3-4d0f-983e-523d4bba3f87 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -499,7 +496,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 19
+          "execution_count": 5
         }
       ]
     },
@@ -513,9 +510,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Xd4gBvprifDr",
-        "outputId": "4e525467-0ddf-4eb0-e5f9-712c074b5ded"
+        "outputId": "7c65c2a6-a429-4598-edcd-7678ebfa8a8a"
       },
-      "execution_count": 20,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -537,7 +534,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 20
+          "execution_count": 6
         }
       ]
     },
@@ -547,7 +544,7 @@
       "metadata": {
         "id": "5uksQmmJnE6O"
       },
-      "execution_count": 20,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -570,9 +567,9 @@
           "height": 355
         },
         "id": "p5USg_l_nUKm",
-        "outputId": "e70c94f7-d426-4964-9079-4978d361977e"
+        "outputId": "5a67bcdd-8934-4626-81d7-a07788c553d3"
       },
-      "execution_count": 21,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -610,7 +607,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-f187f531-30f5-4fcd-8061-586a15fcef7d\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-abcce41b-1c84-4bf7-8618-7aef7c9f15e7\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -770,7 +767,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-f187f531-30f5-4fcd-8061-586a15fcef7d')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-abcce41b-1c84-4bf7-8618-7aef7c9f15e7')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -822,12 +819,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-f187f531-30f5-4fcd-8061-586a15fcef7d button.colab-df-convert');\n",
+              "        document.querySelector('#df-abcce41b-1c84-4bf7-8618-7aef7c9f15e7 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-f187f531-30f5-4fcd-8061-586a15fcef7d');\n",
+              "        const element = document.querySelector('#df-abcce41b-1c84-4bf7-8618-7aef7c9f15e7');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -847,8 +844,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-f4239f27-f299-4d71-9663-c1a01b05aea2\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-f4239f27-f299-4d71-9663-c1a01b05aea2')\"\n",
+              "<div id=\"df-1196fb45-497a-4868-8f13-754dfc9d5838\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-1196fb45-497a-4868-8f13-754dfc9d5838')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -967,7 +964,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-f4239f27-f299-4d71-9663-c1a01b05aea2 button');\n",
+              "        document.querySelector('#df-1196fb45-497a-4868-8f13-754dfc9d5838 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -978,7 +975,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 21
+          "execution_count": 7
         }
       ]
     },
@@ -991,22 +988,22 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 524
+          "height": 523
         },
         "id": "78W2oZVSwLT2",
-        "outputId": "f52105f2-bcc0-47f2-998a-a666aa945ced"
+        "outputId": "bad2e814-0848-486c-a222-0c2fd0b4eaf3"
       },
-      "execution_count": 22,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<seaborn.axisgrid.FacetGrid at 0x7ba13f457e50>"
+              "<seaborn.axisgrid.FacetGrid at 0x7b833ff09c90>"
             ]
           },
           "metadata": {},
-          "execution_count": 22
+          "execution_count": 8
         },
         {
           "output_type": "display_data",
@@ -1026,7 +1023,7 @@
       "metadata": {
         "id": "-92ow1ObBsUw"
       },
-      "execution_count": 22,
+      "execution_count": 8,
       "outputs": []
     }
   ]
